fixes chatlist soverflow error

--- a/src/assets/sass/components/_chat.scss
+++ b/src/assets/sass/components/_chat.scss
@@ -1,6 +1,7 @@
 .chatlist-container {
   padding-top: 1rem;
   overflow-y: auto;
+  overflow-x: hidden;
   height: 25rem;
   width: 100%;
   background-color: var(--clr-primary-900);
