--- a/src/assets/sass/pages/_channel.scss
+++ b/src/assets/sass/pages/_channel.scss
@@ -3,7 +3,9 @@
   flex-direction: column;
   justify-content: space-between;
   background-color: var(--clr-primary-900);
+  min-width: 20%;
   width: 100%;
+  max-width: 100%;
 }
 
 .channel-header {
