--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -9,5 +9,5 @@
   display: flex;
   flex-direction: row;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
 }
