--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -274,6 +274,7 @@ body {
 .chatlist-container {
   padding-top: 1rem;
   overflow-y: auto;
+  overflow-x: hidden;
   height: 25rem;
   width: 100%;
   background-color: var(--clr-primary-900);
@@ -586,7 +587,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
   background-color: var(--clr-primary-900);
+  min-width: 20%;
   width: 100%;
+  max-width: 100%;
 }
 
 .channel-header {
@@ -614,7 +617,7 @@ body {
   display: flex;
   flex-direction: row;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
 }
 
 .hero-section {
